--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve", 
+    "start": "node server.js", 
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -51,7 +51,7 @@
     "typescript": "~3.8.3"
   },
   "engines": {
-    "node": "6.11.0",
-    "npm": "3.10.10"
+    "node": "10.13.0",
+    "npm": "6.4.1"
   }
 }
