--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js", 
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,21 +12,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "^9.1.1",
-    "@angular/compiler-cli": "^9.1.1",
-    "typescript": "~3.8.3",
     "@angular/animations": "~9.1.1",
     "@angular/cdk": "^9.2.0",
+    "@angular/cli": "^9.1.1",
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
+    "@angular/compiler-cli": "^9.1.1",
     "@angular/core": "~9.1.1",
     "@angular/forms": "~9.1.1",
     "@angular/material": "^9.2.0",
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "express": "^4.17.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "typescript": "~3.8.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
